# movie-poisj

./: .gitignore  Makefile  README.md  db.sqlite  etl_script.py  fixer.py  pyproject.toml
app/: main.py
certsGen/: es1.key  es2.key  es3.key  flexerCA.key
