[tool.poetry]
name = "movie"
version = "0.1.0"
description = ""
authors = ["nesterov-art <nesterov-art@yandex-team.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
certifi = "^2024.2.2"
elasticsearch = "8.13"
fastapi = "^0.111.0"
flask = "^3.0.3"
wtforms = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
